grammars/tree-sitter/test/corpus/javascript.txt
==================
Import Statements
==================

import { track } from 'ripple';
import type { Component } from 'ripple';
import * as Ripple from 'ripple';

---

(program
  (import_statement
    (import_clause
      (named_imports
        (import_specifier
          name: (identifier))))
    (from_clause
      (string)))
  (import_statement
    (import_clause
      (named_imports
        (import_specifier
          name: (identifier))))
    (from_clause
      (string)))
  (import_statement
    (import_clause
      (namespace_import
        (identifier)))
    (from_clause
      (string))))

==================
Export Statements
==================

export { Counter };
export default Counter;
export * from 'ripple';

---

(program
  (export_statement
    (export_clause
      (export_specifier
        name: (identifier))))
  (export_statement
    (identifier))
  (export_statement
    (from_clause
      (string))))

==================
Variable Declarations
==================

let count = 0;
const name = "Ripple";
var value;

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (number))))
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (string))))
  (variable_declaration
    (variable_declarator
      name: (identifier))))

==================
Function Declarations
==================

function add(a, b) {
  return a + b;
}

async function fetchData() {
  return await fetch('/api');
}

---

(program
  (function_declaration
    name: (identifier)
    parameters: (formal_parameters
      (required_parameter
        pattern: (identifier))
      (required_parameter
        pattern: (identifier)))
    body: (statement_block
      (return_statement
        (binary_expression
          left: (identifier)
          right: (identifier)))))
  (function_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (statement_block
      (return_statement
        (call_expression
          function: (await_expression
            (identifier))
          arguments: (arguments
            (string)))))))

==================
Arrow Functions
==================

const add = (a, b) => a + b;
const increment = x => x + 1;
const log = () => { console.log('test'); };

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (arrow_function
          parameters: (formal_parameters
            (required_parameter
              pattern: (identifier))
            (required_parameter
              pattern: (identifier)))
          body: (binary_expression
            left: (identifier)
            right: (identifier))))))
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (arrow_function
          parameter: (identifier)
          body: (binary_expression
            left: (identifier)
            right: (number))))))
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (arrow_function
          parameters: (formal_parameters)
          body: (statement_block
            (expression_statement
              (call_expression
                function: (member_expression
                  object: (identifier)
                  property: (identifier))
                arguments: (arguments
                  (string))))))))))

==================
Class Declarations
==================

class Counter {
  count = 0;
  
  increment() {
    this.count++;
  }
}

---

(program
  (class_declaration
    name: (identifier)
    body: (class_body
      (field_definition
        property: (property_name
          (identifier))
        (initializer
          (number)))
      (method_definition
        name: (property_name
          (identifier))
        parameters: (formal_parameters)
        body: (statement_block
          (expression_statement
            (update_expression
              argument: (member_expression
                object: (this)
                property: (identifier)))))))))

==================
Destructuring
==================

const { a, b } = obj;
const [x, y] = arr;
const { c: renamed, ...rest } = obj;

---

(program
  (variable_declaration
    (variable_declarator
      name: (object_pattern
        (shorthand_property_identifier_pattern
          (shorthand_property_identifier))
        (shorthand_property_identifier_pattern
          (shorthand_property_identifier)))
      (initializer
        (identifier))))
  (variable_declaration
    (variable_declarator
      name: (array_pattern
        (identifier)
        (identifier))
      (initializer
        (identifier))))
  (variable_declaration
    (variable_declarator
      name: (object_pattern
        (pair_pattern
          key: (property_name
            (identifier))
          value: (identifier))
        (rest_pattern
          (identifier)))
      (initializer
        (identifier)))))

==================
TypeScript Type Annotations
==================

let count: number = 0;
const name: string = "test";
function add(a: number, b: number): number {
  return a + b;
}

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (type
        (predefined_type))
      (initializer
        (number))))
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (type
        (predefined_type))
      (initializer
        (string))))
  (function_declaration
    name: (identifier)
    parameters: (formal_parameters
      (required_parameter
        pattern: (identifier)
        (type
          (predefined_type)))
      (required_parameter
        pattern: (identifier)
        (type
          (predefined_type))))
    (type
      (predefined_type))
    body: (statement_block
      (return_statement
        (binary_expression
          left: (identifier)
          right: (identifier))))))

==================
Template Strings
==================

const msg = `Hello ${name}!`;
const multiline = `
  Line 1
  Line 2
`;

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (template_string
          (template_substitution
            (identifier))))))
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (template_string)))))
