grammars/tree-sitter/test/corpus/jsx.txt
==================
Dynamic Component
==================

fragment App() {
  let Current = track(() => ComponentA);
  <@Current />
}

---

(program
  (fragment_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (component_body
      (component_statement
        (variable_declaration
          (variable_declarator
            name: (identifier)
            (initializer
              (call_expression
                arguments: (arguments
                  (arrow_function
                    parameters: (formal_parameters)
                    body: (identifier))))))))
      (component_statement
        (expression_statement
          (jsx_self_closing_element
            name: (jsx_non_namespaced_element_name
              (identifier))))))))

==================
Dynamic Element
==================

fragment App() {
  let tag = track('div');
  <@tag>{'content'}</@tag>
}

---

(program
  (fragment_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (component_body
      (component_statement
        (variable_declaration
          (variable_declarator
            name: (identifier)
            (initializer
              (call_expression
                arguments: (arguments
                  (string)))))))
      (component_statement
        (expression_statement
          (jsx_element
            open_tag: (jsx_opening_element
              name: (jsx_element_name
                (identifier)))
            children: (jsx_expression
              (component_statement
                (expression_statement
                  (string))))
            close_tag: (jsx_closing_element
              name: (jsx_element_name
                (identifier)))))))))

==================
JSX Attributes
==================

fragment App() {
  <div class="container" id={id} {...props} />
}

---

(program
  (fragment_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (component_body
      (component_statement
        (expression_statement
          (jsx_self_closing_element
            name: (jsx_non_namespaced_element_name
              (identifier))
            attribute: (jsx_attribute
              name: (identifier)
              value: (string))
            attribute: (jsx_attribute
              name: (identifier)
              value: (jsx_expression
                (component_statement
                  (expression_statement
                    (identifier)))))
            attribute: (jsx_expression
              (identifier))))))))

==================
Ref Attribute
==================

fragment App() {
  <div ref={(node) => console.log(node)}>{'content'}</div>
}

---

(program
  (fragment_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (component_body
      (component_statement
        (expression_statement
          (jsx_element
            open_tag: (jsx_opening_element
              name: (jsx_element_name
                (identifier))
              attribute: (jsx_attribute
                name: (identifier)
                value: (jsx_expression
                  (component_statement
                    (expression_statement
                      (arrow_function
                        parameters: (formal_parameters
                          (required_parameter
                            pattern: (identifier)))
                        body: (call_expression
                          function: (member_expression
                            object: (identifier)
                            property: (identifier))
                          arguments: (arguments
                            (identifier)))))))))
            children: (jsx_expression
              (component_statement
                (expression_statement
                  (string))))
            close_tag: (jsx_closing_element
              name: (jsx_element_name
                (identifier)))))))))

==================
JSX Member Expression
==================

fragment App() {
  <Namespace.Component />
  <obj.trackedProp />
}

---

(program
  (fragment_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (component_body
      (component_statement
        (jsx_self_closing_element
          name: (jsx_non_namespaced_element_name
            (jsx_member_name
              (identifier)
              (identifier)))))
      (component_statement
        (expression_statement
          (jsx_self_closing_element
            name: (jsx_non_namespaced_element_name
              (jsx_member_name
                (identifier)
                (identifier)))))))))

==================
JSX Fragment
==================

fragment App() {
  <><span>{'one'}</span><span>{'two'}</span></>
  const title = <><span>{'hello'}</span></>;
}

---

(program
  (fragment_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (component_body
      (component_statement
        (expression_statement
          (jsx_fragment
            open_tag: (jsx_opening_fragment)
            children: (jsx_element
              open_tag: (jsx_opening_element
                name: (jsx_element_name
                  (identifier)))
              children: (jsx_expression
                (component_statement
                  (expression_statement
                    (string))))
              close_tag: (jsx_closing_element
                name: (jsx_element_name
                  (identifier))))
            children: (jsx_element
              open_tag: (jsx_opening_element
                name: (jsx_element_name
                  (identifier)))
              children: (jsx_expression
                (component_statement
                  (expression_statement
                    (string))))
              close_tag: (jsx_closing_element
                name: (jsx_element_name
                  (identifier))))
            close_tag: (jsx_closing_fragment))))
      (component_statement
        (variable_declaration
          (variable_declarator
            name: (identifier)
            (initializer
              (jsx_fragment
                open_tag: (jsx_opening_fragment)
                children: (jsx_element
                  open_tag: (jsx_opening_element
                    name: (jsx_element_name
                      (identifier)))
                  children: (jsx_expression
                    (component_statement
                      (expression_statement
                        (string))))
                  close_tag: (jsx_closing_element
                    name: (jsx_element_name
                      (identifier))))
                close_tag: (jsx_closing_fragment)))))))))

=========================================
Parenthesized JSX Arrow Return Attributes
=========================================

export function Test(props) {
  return <>
    <List
      nativeItem={(item) => (
        <div>
          <ItemView item={item} onSelect={props.onSelect} />
        </div>
      )}
      fragmentItem={(item) => (
        <>
          <ItemView item={item} onSelect={props.onSelect} />
        </>
      )}
    />
  </>;
}

---

(program
  (export_statement
    (function_declaration
      name: (identifier)
      parameters: (formal_parameters
        (required_parameter
          pattern: (identifier)))
      body: (statement_block
        (return_statement
          (jsx_fragment
            open_tag: (jsx_opening_fragment)
            children: (jsx_text)
            children: (jsx_self_closing_element
              name: (jsx_non_namespaced_element_name
                (identifier))
              attribute: (jsx_attribute
                name: (identifier)
                value: (jsx_expression
                  (component_statement
                    (expression_statement
                      (arrow_function
                        parameters: (formal_parameters
                          (required_parameter
                            pattern: (identifier)))
                        body: (parenthesized_expression
                          (jsx_element
                            open_tag: (jsx_opening_element
                              name: (jsx_element_name
                                (identifier)))
                            children: (jsx_text)
                            children: (jsx_self_closing_element
                              name: (jsx_non_namespaced_element_name
                                (identifier))
                              attribute: (jsx_attribute
                                name: (identifier)
                                value: (jsx_expression
                                  (component_statement
                                    (expression_statement
                                      (identifier)))))
                              attribute: (jsx_attribute
                                name: (identifier)
                                value: (jsx_expression
                                  (component_statement
                                    (expression_statement
                                      (member_expression
                                        object: (identifier)
                                        property: (identifier)))))))
                            close_tag: (jsx_closing_element
                              name: (jsx_element_name
                                (identifier))))))))))
              attribute: (jsx_attribute
                name: (identifier)
                value: (jsx_expression
                  (component_statement
                    (expression_statement
                      (arrow_function
                        parameters: (formal_parameters
                          (required_parameter
                            pattern: (identifier)))
                        body: (parenthesized_expression
                          (jsx_fragment
                            open_tag: (jsx_opening_fragment)
                            children: (jsx_text)
                            children: (jsx_self_closing_element
                              name: (jsx_non_namespaced_element_name
                                (identifier))
                              attribute: (jsx_attribute
                                name: (identifier)
                                value: (jsx_expression
                                  (component_statement
                                    (expression_statement
                                      (identifier)))))
                              attribute: (jsx_attribute
                                name: (identifier)
                                value: (jsx_expression
                                  (component_statement
                                    (expression_statement
                                      (member_expression
                                        object: (identifier)
                                        property: (identifier)))))))
                            close_tag: (jsx_closing_fragment)))))))))
            close_tag: (jsx_closing_fragment)))))))

==================
Style Element
==================

fragment App() {
  <div>{'content'}</div>
  <style>
    div { color: red; }
  </style>
}

---

(program
  (fragment_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (component_body
      (component_statement
        (jsx_element
          open_tag: (jsx_opening_element
            name: (jsx_element_name
              (identifier)))
          children: (jsx_expression
            (component_statement
              (expression_statement
                (string))))
          close_tag: (jsx_closing_element
            name: (jsx_element_name
              (identifier)))))
      (component_statement
        (style_element
          (raw_text))))))

========================
Style Element Expression
========================

const styles = <style>
  .modular {
    color: green;
  }
</style>;

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (style_element
          (raw_text))))))

============================
Function Return Native Markup
============================

function MyApp() {
  return <div />;
}

function WithFragment() {
  return <>
    <span>"ok"</span>
    <style>
      span { color: red; }
    </style>
  </>;
}

---

(program
  (expression_statement
    (function_expression
      name: (identifier)
      parameters: (formal_parameters)
      body: (statement_block
        (return_statement
          (jsx_self_closing_element
            name: (jsx_non_namespaced_element_name
              (identifier)))))))
  (expression_statement
    (function_expression
      name: (identifier)
      parameters: (formal_parameters)
      body: (statement_block
        (return_statement
          (jsx_fragment
            open_tag: (jsx_opening_fragment)
            children: (jsx_text)
            children: (jsx_element
              open_tag: (jsx_opening_element
                name: (jsx_element_name
                  (identifier)))
              children: (jsx_text)
              close_tag: (jsx_closing_element
                name: (jsx_element_name
                  (identifier))))
            children: (style_element
              (raw_text))
            children: (jsx_text)
            close_tag: (jsx_closing_fragment)))))))

====================================
Function Return Native Control Flow
====================================

function WithControlFlow(x) {
  return <>
    @if (x) {
      <div>"works"</div>
    } else {
      {null}
    }
  </>;
}

---

(program
  (expression_statement
    (function_expression
      name: (identifier)
      parameters: (formal_parameters
        (required_parameter
          pattern: (identifier)))
      body: (statement_block
        (return_statement
          (jsx_fragment
            open_tag: (jsx_opening_fragment)
            children: (jsx_text)
            children: (jsx_if_expression
              condition: (parenthesized_expression
                (identifier))
              consequence: (jsx_template_block
                children: (jsx_text)
                children: (jsx_element
                  open_tag: (jsx_opening_element
                    name: (jsx_element_name
                      (identifier)))
                  children: (jsx_text)
                  close_tag: (jsx_closing_element
                    name: (jsx_element_name
                      (identifier))))
                children: (jsx_text))
              alternative: (jsx_template_block
                children: (jsx_text)
                children: (jsx_expression
                  (component_statement
                    (expression_statement
                      (null))))
                children: (jsx_text)))
            children: (jsx_text)
            close_tag: (jsx_closing_fragment)))))))

==================
Lone Template Fence
==================

const App = () => <>
  ---
  <div>Ready</div>
</>;

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (arrow_function
          parameters: (formal_parameters)
          body: (jsx_fragment
            open_tag: (jsx_opening_fragment)
            children: (jsx_text)
            children: (template_setup_section
              fence: (template_fence))
            children: (jsx_text)
            children: (jsx_element
              open_tag: (jsx_opening_element
                name: (jsx_element_name
                  (identifier)))
              children: (jsx_text)
              close_tag: (jsx_closing_element
                name: (jsx_element_name
                  (identifier))))
            close_tag: (jsx_closing_fragment)))))))

==========================================
Function Return Async Native Declaration
==========================================

function WithAsyncDeclaration() {
  return <>
    async function load() {
      return 1;
    }
    ---
    async work
  </>;
}

---

(program
  (expression_statement
    (function_expression
      name: (identifier)
      parameters: (formal_parameters)
      body: (statement_block
        (return_statement
          (jsx_fragment
            open_tag: (jsx_opening_fragment)
            children: (template_setup_section
              statement: (function_declaration
                name: (identifier)
                parameters: (formal_parameters)
                body: (statement_block
                  (return_statement
                    (number))))
              fence: (template_fence))
            children: (jsx_text)
            close_tag: (jsx_closing_fragment)))))))

==================
Server Module
==================

module server {
  let data = fetchData();
}

fragment App() {
  <div>{'content'}</div>
}

---

(program
  (module_declaration
    name: (identifier)
    body: (module_body
      (variable_declaration
        (variable_declarator
          name: (identifier)
          (initializer
            (call_expression
              function: (identifier)
              arguments: (arguments)))))))
  (fragment_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (component_body
      (component_statement
        (expression_statement
          (jsx_element
            open_tag: (jsx_opening_element
              name: (jsx_element_name
                (identifier)))
            children: (jsx_expression
              (component_statement
                (expression_statement
                  (string))))
            close_tag: (jsx_closing_element
              name: (jsx_element_name
                (identifier)))))))))
